ini editannya amel

--- a/link.html
+++ b/link.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="hello.html">halaman sebelumnya</a>
+    <a href="hello.html">halaman sebelumnya aaa</a>
     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi rerum ipsa et, ab odio voluptas voluptatum ad aliquid at inventore animi temporibus, non repellat nulla rem fuga? Modi, temporibus iusto.
 </body>
 </html>
