--- a/Modul1/cobahtml5-6.html
+++ b/Modul1/cobahtml5-6.html
@@ -7,7 +7,7 @@
     <title>Form Biodata</title>
 </head>
 <body>
-    <form id="formulir" action="info.php" method="post">
+    <form style="width: 50%;" id="formulir" action="info.php" method="post">
         <fieldset>
             <legend>Form Pengisian Biodata</legend>
             <p>
